--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-helmet-async": "1.0.4",
     "react-hot-loader": "4.12.18",
     "react-intl": "2.9.0",
+    "react-landing-page": "^1.1.3",
     "react-loadable": "5.4.0",
     "react-metrics": "^2.4.0",
     "react-redux": "7.1.3",
