--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "webpack-hot-middleware": "2.25.0",
     "webpack-node-externals": "^1.7.2",
     "webpack-pwa-manifest": "4.1.1",
-    "whatwg-fetch": "3.0.0"
+    "whatwg-fetch": "3.0.0",
+    "wpcom": "^5.4.2"
   },
   "devDependencies": {
     "@babel/cli": "7.7.4",
