--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "rimraf": "3.0.0",
     "serverless": "^1.24.1",
     "shelljs": "0.8.3",
+    "striptags": "^3.1.1",
     "style-loader": "1.0.0",
     "stylelint": "12.0.0",
     "stylelint-config-recommended": "3.0.0",
