--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "circular-dependency-plugin": "5.2.0",
     "compression": "1.7.4",
     "connected-react-router": "6.6.1",
+    "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "express": "4.17.1",
     "fontfaceobserver": "2.1.0",
