--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-intl": "2.9.0",
     "react-landing-page": "^1.1.3",
     "react-loadable": "5.4.0",
+    "react-markdown": "^4.0.3",
     "react-metrics": "^2.4.0",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
