--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-snapshot": "^1.3.0",
+    "rebass": "4.0.7",
     "redux-injectors": "1.2.0",
     "redux-saga": "1.1.3",
     "reselect": "4.0.0",
