--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "prop-types": "15.7.2",
     "react": "16.11.0",
     "react-app-polyfill": "1.0.4",
+    "react-container-dimensions": "1.4.1",
     "react-dom": "16.11.0",
     "react-helmet": "5.2.1",
     "react-helmet-async": "1.0.4",
