--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-loadable": "5.4.0",
     "react-markdown": "^4.0.3",
     "react-metrics": "^2.4.0",
+    "react-on-screen": "2.1.1",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-snapshot": "^1.3.0",
