--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "generate": "plop --plopfile internals/generators/index.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint app/**/*.js",
-    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
-    "lint:eslint:fix": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts --fix",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts --ignore-pattern app/experiments/emscripten",
+    "lint:eslint:fix": "eslint --ignore-path .gitignore --ignore-pattern internals/script --ignore-pattern app/experiments/emscriptens --fix",
     "lint:js": "npm run lint:eslint -- . ",
     "pretest": "npm run test:clean && npm run lint",
     "test:clean": "rimraf ./coverage",
