--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@fortawesome/fontawesome-svg-core": "1.2.27",
+    "@fortawesome/free-brands-svg-icons": "5.12.1",
+    "@fortawesome/free-solid-svg-icons": "5.12.1",
+    "@fortawesome/react-fontawesome": "0.1.8",
     "@hot-loader/react-dom": "16.11.0",
     "@reduxjs/toolkit": "1.0.4",
     "add-asset-html-webpack-plugin": "3.1.3",
