--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@fortawesome/free-solid-svg-icons": "5.12.1",
     "@fortawesome/react-fontawesome": "0.1.8",
     "@hot-loader/react-dom": "16.11.0",
+    "@rebass/preset": "4.0.5",
     "@reduxjs/toolkit": "1.0.4",
     "add-asset-html-webpack-plugin": "3.1.3",
     "add-asset-webpack-plugin": "^0.1.0",
