--- a/package.json
+++ b/package.json
@@ -65,9 +65,6 @@
       "pre-commit": "lint-staged"
     }
   },
-  "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
-  },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "@fortawesome/fontawesome-svg-core": "1.2.27",
@@ -149,7 +146,7 @@
     "@babel/register": "7.7.4",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.2",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "^7.0.0-0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^23.6.0",
     "babel-loader": "8.0.6",
@@ -209,6 +206,6 @@
     "url-loader": "2.3.0"
   },
   "peerDependencies": {
-    "babel-core": "6.x | ^7.0.0-0"
+    "babel-core": "^7.0.0-0"
   }
 }
