package: Bump react-router deps
Was getting some exceptions due to mismatched versions in connected-react-router
and react-router

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "chalk": "3.0.0",
     "circular-dependency-plugin": "5.2.0",
     "compression": "1.7.4",
-    "connected-react-router": "6.6.1",
+    "connected-react-router": "6.8.0",
     "cors": "^2.8.5",
     "cross-env": "6.0.3",
     "express": "4.17.1",
@@ -110,7 +110,8 @@
     "react-metrics": "^2.4.0",
     "react-on-screen": "2.1.1",
     "react-redux": "7.1.3",
-    "react-router-dom": "5.1.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-snapshot": "^1.3.0",
     "rebass": "4.0.7",
     "redux-injectors": "1.2.0",
